# svreader

./: .gitignore  Cargo.toml  Makefile  README.md
.cargo/: config.toml
crates/svreader-cli/: Cargo.toml
crates/svreader-cli/src/: main.rs
crates/svreader-core/: Cargo.toml
crates/svreader-core/src/: buffer.rs  cache.rs  commands.rs  docstate.rs  document.rs  keys.rs  lib.rs  navigator.rs  pdf.rs  prefetch.rs  renderer.rs  viewport.rs
crates/svreader-core/tests/: cache.rs  docstate_roundtrip.rs  explorer.rs  navigator.rs  viewport_math.rs
crates/svreader-tui/: Cargo.toml
crates/svreader-tui/examples/: sixel_bench.rs
crates/svreader-tui/src/: capabilities.rs  ecache_fill.rs  encoded_cache.rs  lib.rs  render_loop.rs  sixel_write.rs  terminal.rs  timings.rs  tmux.rs  ui.rs  window.rs  workspace.rs
crates/svreader-tui/tests/: window_tree.rs
src/: main.rs
