[package]
name = "svreader-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "svreader-cli"
path = "src/main.rs"

[dependencies]
svreader-core.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
image.workspace = true
clap.workspace = true
