[package]
name = "svreader-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
image.workspace = true
lru.workspace = true
parking_lot.workspace = true
serde.workspace = true
mupdf.workspace = true
