[package]
name = "svreader-tui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
svreader-core.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
image.workspace = true
sixel-bytes.workspace = true
sixel-sys-static.workspace = true
crossterm.workspace = true
clap.workspace = true
unicode-width.workspace = true
parking_lot.workspace = true
lru.workspace = true

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
anyhow.workspace = true
